--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -56,6 +57,24 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.toilet-card {
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.toilet-card:hover{
+  transform: scale(1.01);
+}
+
+.max-width-general{
+  max-width: 1380px;
+}
+
+#map {
+  height: 360px;
+  width: 480px;
 }
 
 @media (prefers-color-scheme: light) {
